Send messages within specific rooms

--- a/public/chat.html
+++ b/public/chat.html
@@ -23,6 +23,9 @@
             </form>
             <button id="my-location">Send Location</button>
         </div>
+    </div>
+
+<!-- -----------------TEMPLATES----------------------------- -->
         <script id="message-template" type="text/template">
             <li class="message">
                 <div class="message__title">
@@ -46,7 +49,8 @@
             </li>
         </script>
 
-    </div>  
+    
+    
     <!-- <script src="/js/template.js"></script> -->
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/lib/jquery-3.3.1.min.js"></script>
